2005-12-02 Daniel Perez <daniel@gforgegroup.com>
	cvstracker plugin : changed the handle of the vars, to send only one

2005-12-01 Daniel Perez <daniel@gforgegroup.com>
	rss 2.0 feed patch added

2005-11-30 Daniel Perez <daniel@gforgegroup.com>
	svntracker plugin : changed the handle of the vars, to send only one
	post to newcommit.php (previously there were multiple HTTP POSTS)

2005-11-28 Daniel Perez <daniel@gforgegroup.com>
	www/admin/pluginman.php : added create/remove symlink to www and config dirs
	Fckeditor plugin : changed core files to www/ dir in fckeditor plugin instead of gforge include dir
	News : added fckeditor plugin integration
	Doc Manager : added fckeditor plugin integration. organized the logic (was too entangled)

2005-11-25 Tim Perdue <tim@gforgegroup.com>

	* added some javascript libraries
	* modified docman index to use javascript tree - you can expand
	folders now without a round-trip back to the server

2005-11-25 Tim Perdue <tim@gforgegroup.com>

	* added quick-jump navigation system
	* added back in the quick-browse for tracker, which was removed for power query
	* made cvssyncmail plugin so it can be unchecked
	* completely cleaned up cvs.php cronjob

2005-11-25 Daniel Perez <daniel@gforgegroup.com>
	Patchs applied : 
	* Fixed bug -> history parse runs out of memory
		http://gforge.org/tracker/?func=detail&aid=1585&group_id=6&atid=222
	* Fixed bug -> Hide skills search if sys_use_people is false
          https://gforge.org/tracker/?func=detail&aid=1586&group_id=6&atid=222	

2005-11-17  Ognyan Kulev  <ogi@fmi.uni-sofia.bg>

	* docs/docbook/docbook/installation_guide/installation_guide.xml:
	/etc/gforge/custom/index_std.php instead of www/index_std.php.
	Branch_4_5 instead of HEAD for checking out plugins.

2005-11-10 Daniel Perez <daniel@gforgegroup.com>
	Forum : Fixing bugs in display / emails
	Admin : added plugin manager -> to enable/disable in a site wide fashion the plugins

2005-11-10 Daniel Perez <daniel@gforgegroup.com>