@@ -1,3 +1,8 @@
+2005-12-05 Daniel Perez <daniel@gforgegroup.com>
+	Patchs applied :
+	* Fixed bug -> usergroup.php has multiple problems 'deleting' CVS repositories
+		http://gforge.org/tracker/?func=detail&aid=1681&group_id=6&atid=222
+
 2005-12-02 Daniel Perez <daniel@gforgegroup.com>
 	cvstracker plugin : changed the handle of the vars, to send only one
 
